Attempting to correct styling issue on mobile

--- a/src/App.scss
+++ b/src/App.scss
@@ -594,7 +594,7 @@ $desktop: 1200px;
         flex-direction: row;
         justify-content: space-between;
         .content {
-          width: 30%;
+          max-width: 30%;
           color: #4a4f6a;
           h5 {
             font-family: "Harriet Display Bold";
